Documented /room/read/{postId}, updated swagger doc
